src/snapshots/toker__cmds__restart_tests__a_busy_toker_is_waited_for_and_an_idle_reading_between_requests_is_not_enough.snap
---
source: src/cmds.rs
expression: out
---
waiting for 2 responses in flight to finish (Ctrl-C leaves toker untouched)
  1 in flight
toker 0ld1d0ld is draining and will exit; waiting for systemd to start the next one
toker n3wn3wn3 is up: version 0.1.0, up 0s
