src/snapshots/toker__cmds__restart_tests__a_drain_that_never_ends_is_forced_after_the_up_timeout.snap
---
source: src/cmds.rs
expression: out
---
toker 0ld1d0ld is draining and will exit; waiting for systemd to start the next one
the old instance was still draining 100ms after the shutdown; stopping toker without waiting for connections, systemd starts the next one
toker n3wn3wn3 is up: version 0.1.0, up 0s
