src/snapshots/toker__cmds__restart_tests__a_service_that_is_not_running_is_reported_and_left_alone.snap
---
source: src/cmds.rs
expression: "format!(\"{error:#}\")"
---
nothing is listening on 127.0.0.1:20000: toker is not running. Nothing was restarted; `systemctl --user start toker.socket` starts it.
