src/snapshots/toker__cmds__restart_tests__a_successor_that_never_answers_is_a_clear_failure.snap
---
source: src/cmds.rs
expression: "format!(\"{out}---\\n{error:#}\")"
---
toker 0ld1d0ld is draining and will exit; waiting for systemd to start the next one
the old instance was still draining 100ms after the shutdown; stopping toker without waiting for connections, systemd starts the next one
---
no new toker answered on 127.0.0.1:20000 within 100ms of the forced shutdown. Under systemd `Restart=always` starts the next one once the old one has exited (see `systemctl --user status toker.service`). A hand-run `toker serve` is not restarted.
