src/snapshots/toker__cmds__restart_tests__an_idle_toker_is_restarted_after_the_quiet_polls_and_says_little.snap
---
source: src/cmds.rs
expression: out
---
toker 0ld1d0ld is draining and will exit; waiting for systemd to start the next one
toker n3wn3wn3 is up: version 0.1.0, up 0s
