src/snapshots/toker__cmds__restart_tests__max_wait_expiring_forces_the_stop_instead_of_waiting_on.snap
---
source: src/cmds.rs
expression: out
---
waiting for 1 response in flight to finish (Ctrl-C leaves toker untouched)
no quiet moment within 1ms: 1 response in flight at the last look; stopping toker without waiting for connections, systemd starts the next one
toker n3wn3wn3 is up: version 0.1.0, up 0s
