src/snapshots/toker__cmds__restart_tests__max_wait_expiring_restarts_nothing.snap
---
source: src/cmds.rs
expression: "format!(\"{out}---\\n{error:#}\")"
---
waiting for 1 response in flight to finish (Ctrl-C leaves toker untouched)
---
no quiet moment within 30ms (--max-wait): 1 response in flight at the last look. toker was not restarted.
